#4293 Removed JAXB dependency
Conflicts:
	impl/src/main/java/com/sun/faces/util/ByteArrayGuardAESCTR.java

Signed-off-by: Guillermo González de Agüero <z06.guillermo@gmail.com>