@@ -26,6 +26,7 @@ import javax.crypto.SecretKey;
 import javax.crypto.spec.IvParameterSpec;
 import javax.faces.FacesException;
 import java.security.SecureRandom;
+import java.util.Base64;
 import java.util.SortedMap;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -35,7 +36,6 @@ import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
 import javax.naming.InitialContext;
 import javax.naming.NamingException;
-import javax.xml.bind.DatatypeConverter;
 
 /**
  * <p>This utility class is to provide both encryption and
@@ -111,7 +111,7 @@ public final class ByteArrayGuardAESCTR {
             byte[] temp = concatBytes(iv, encdata);
 
             // Base64 encode the encrypted bytes
-            securedata = DatatypeConverter.printBase64Binary(temp);
+            securedata = Base64.getEncoder().encodeToString(temp);
         } catch (NoSuchAlgorithmException | NoSuchPaddingException | InvalidKeyException | InvalidAlgorithmParameterException | IllegalBlockSizeException | BadPaddingException e) {
             if (LOGGER.isLoggable(Level.SEVERE)) {
                 LOGGER.log(Level.SEVERE,
@@ -126,7 +126,7 @@ public final class ByteArrayGuardAESCTR {
 
     public String decrypt(String value) throws InvalidKeyException {
         
-        byte[] bytes = DatatypeConverter.parseBase64Binary(value);;
+        byte[] bytes = Base64.getDecoder().decode(value); 
         
         try {
             byte[] iv = new byte[16];
@@ -161,7 +161,7 @@ public final class ByteArrayGuardAESCTR {
             InitialContext context = new InitialContext();
             String encodedKeyArray = (String) context.lookup("java:comp/env/jsf/FlashSecretKey");
             if (null != encodedKeyArray) {
-                byte[] keyArray = DatatypeConverter.parseBase64Binary(encodedKeyArray);
+                byte[] keyArray = Base64.getDecoder().decode(encodedKeyArray);
                 if (keyArray.length < 16) {
                     throw new FacesException("key must be at least 16 bytes long.");
                 }
